fixed spacing again

--- a/src/main/webapp/css/user-page.css
+++ b/src/main/webapp/css/user-page.css
@@ -22,7 +22,7 @@
     margin-top: 5px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #344144;
     font-size: medium;
 }
